add HowTo images

--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -172,19 +172,43 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       "name": "Chép file spreadsheet mẫu KHTCp1"
     }, {
       "@type": "HowToStep",
-      "name": "Nhập thông tin chung"
+      "name": "Nhập thông tin chung",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://lehboi.dynv6.net/images/KHTCp1-TT-chung.png",
+        "height": "284",
+        "width": "560"
+      }
     }, {
       "@type": "HowToStep",
-      "name": "Tính quỹ hưu trí"
+      "name": "Tính quỹ hưu trí",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://lehboi.dynv6.net/images/KHTCp1-Quy-huu.png",
+        "height": "664",
+        "width": "1161"
+      }
     }, {
       "@type": "HowToStep",
       "name": "Liệt kê các khoản trả góp nhiều năm"
     }, {
       "@type": "HowToStep",
-      "name": "Liệt kê các mục tiêu tài chính"
+      "name": "Liệt kê các mục tiêu tài chính",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://lehboi.dynv6.net/images/KHTCp1-Muc-tieu.png",
+        "height": "302",
+        "width": "733"
+      }
     }, {
       "@type": "HowToStep",
-      "name": "Xem và điều chỉnh lộ trình tài chính"
+      "name": "Xem và điều chỉnh lộ trình tài chính",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://lehboi.dynv6.net/images/KHTCp1-Lo-trinh.png",
+        "height": "148",
+        "width": "946"
+      }
     }
   ]
 }
