--- a/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
+++ b/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
@@ -153,13 +153,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "step": [
     {
       "@type": "HowToStep",
-      "name": "Chép bảng tính mẫu"
+      "name": "Chép bảng tính mẫu",
+      "text": "Chép bảng tính mẫu về tài khoản Google Drive của bạn"
     }, {
       "@type": "HowToStep",
-      "name": "Ghi mỗi giao dịch"
+      "name": "Ghi mỗi giao dịch",
+      "text": "Ghi đúng cách mỗi giao dịch đưa tiền vào hay rút tiền ra",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://lehboi.dynv6.net/images/DTDH1.png",
+        "height": "256",
+        "width": "470"
+      }
     }, {
       "@type": "HowToStep",
-      "name": "Xem kết quả"
+      "name": "Xem kết quả",
+      "text": "Hiệu quả đầu tư được hiện ra ở dòng đầu trang"
     }
   ]
 }
@@ -336,6 +345,7 @@ data-ad-slot="3830899615">
 
 
   <h3>1.2. Quỹ đầu tư</h3>
+  <div><amp-img alt="Ghi sổ đầu tư" src="/images/DTDH1.png" width="470" height="256" layout="responsive"></amp-img></a></div>
   <p>Cột C của trang tính quỹ đầu tư dùng để ghi giá đơn vị quỹ. Khi chưa rút hết tiền từ tài khoản quỹ đầu tư thì ô C2 ghi giá mới nhất đơn vị quỹ, và ô B2 là công thức nhân số đơn vị quỹ với giá trong ô C2.
   <p>Các giao dịch của một tài khoản quỹ đầu tư:
   <ul>
