--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -169,10 +169,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "step": [
     {
       "@type": "HowToStep",
-      "name": "Chép file spreadsheet mẫu KHTCp1"
+      "name": "Chép file spreadsheet mẫu KHTCp1",
+      "text": "Chép bảng tính mẫu về tài khoản Google Drive của bạn"
     }, {
       "@type": "HowToStep",
       "name": "Nhập thông tin chung",
+      "text": "Nhập tên, năm sinh, năm hiện tại, tình hình tài chính hiện tại",
       "image": {
         "@type": "ImageObject",
         "url": "https://lehboi.dynv6.net/images/KHTCp1-TT-chung.png",
@@ -182,6 +184,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     }, {
       "@type": "HowToStep",
       "name": "Tính quỹ hưu trí",
+      "text": "Quỹ hưu trí được tính từ năm dự định về hưu, tuổi thọ, lạm phát…",
       "image": {
         "@type": "ImageObject",
         "url": "https://lehboi.dynv6.net/images/KHTCp1-Quy-huu.png",
@@ -190,10 +193,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       }
     }, {
       "@type": "HowToStep",
-      "name": "Liệt kê các khoản trả góp nhiều năm"
+      "name": "Liệt kê các khoản trả góp nhiều năm",
+      "text": "Liệt kê những khoản trả góp hoặc chi tiêu kéo dài nhiều năm như nuôi con, học phí…"
     }, {
       "@type": "HowToStep",
       "name": "Liệt kê các mục tiêu tài chính",
+      "text": "Liệt kê những món tiền lớn cần chi trong tương lai như sinh con, mua nhà, mua xe, sửa nhà, cho con du học…",
       "image": {
         "@type": "ImageObject",
         "url": "https://lehboi.dynv6.net/images/KHTCp1-Muc-tieu.png",
@@ -203,6 +208,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     }, {
       "@type": "HowToStep",
       "name": "Xem và điều chỉnh lộ trình tài chính",
+      "text": "Tính lộ trình tài chính dưới dạng bảng và đồ thị, điều chỉnh các mục tiêu và các khoản chi tiêu cũng như trả góp để lộ trình trở nên khả thi và tối ưu",
       "image": {
         "@type": "ImageObject",
         "url": "https://lehboi.dynv6.net/images/KHTCp1-Lo-trinh.png",
