--- a/huu-ich/ke-hoach-tai-chinh/khtcp2.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp2.html
@@ -150,8 +150,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "softwareRequirements": "Google Sheets",
   "url": "https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/",
   "description": "Công cụ lập kế hoạch tài chính cho tất cả các nhu cầu của gia đình trong tương lai, đem đến cuộc sống ổn định trọn đời",
-  "image": "https://lehboi.github.io/images/KHTCp1.png",
-  "screenshot": "https://lehboi.github.io/images/KHTCp1.png",
+  "image": "https://lehboi.github.io/images/KHTCp2.png",
+  "screenshot": "https://lehboi.github.io/images/KHTCp2.png",
   "offers": {
     "@type": "Offer",
     "price": "0"
@@ -176,6 +176,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
