--- a/kinh-nghiem/may-tinh/privcloudstor.html
+++ b/kinh-nghiem/may-tinh/privcloudstor.html
@@ -173,16 +173,20 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "step": [
     {
       "@type": "HowToStep",
-      "name": "Tạo USB boot Linux Ubuntu server"
+      "name": "Tạo USB drive boot Linux Ubuntu server",
+      "text": "Download file .ISO của Linux Ubuntu server và chép ra USB drive"
     }, {
       "@type": "HowToStep",
-      "name": "Boot và install Linux Ubuntu server"
+      "name": "Boot và install Linux Ubuntu server",
+      "text": "Boot từ USB drive và theo các bước trên màn hình"
     }, {
       "@type": "HowToStep",
-      "name": "Tạo admin account trong Nextcloud"
+      "name": "Tạo admin account trong Nextcloud",
+      "text": "Tạo admin account trong lần đầu tiên dùng web browser nối đến Nextcloud"
     }, {
       "@type": "HowToStep",
-      "name": "Port forwarding ở router, tạo dynamic DNS, tạo SSL certificate"
+      "name": "Port forwarding ở router, tạo dynamic DNS, tạo SSL certificate",
+      "text": "Để dùng Nextcloud server từ Internet thì cần đặt tên qua dynamic DNS, tạo SSL certificate cho web server, port forwarding IPv4 từ router đến Nextcloud server"
     }
   ]
 }
