--- a/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
+++ b/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
@@ -150,6 +150,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     "name": "Lê Hồng Bội",
     "url": "http://lehboi.github.io/home/about"
   },
+  "tool": {
+      "@type": "HowToTool",
+      "name": "Computer",
+      "description": "Computer with web browser or Office suit"
+  },
   "step": [
     {
       "@type": "HowToStep",
