--- a/y-kien/da-len-bao.html
+++ b/y-kien/da-len-bao.html
@@ -134,6 +134,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -194,60 +195,64 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <th>Ngày</th>
 </tr>
 <tr>
-<td><a href="https://web.archive.org/web/20140208003515/https://sgtt.vn/Ban-doc/93807/Cau-chuyen-tieu-dung-Sua-xe-may-coi-chung-dinh-chau.html" target='_blank'>Sửa xe máy, coi chừng dính… chấu</a></td>
-<td>18/4/2007</td>
+<td><a href="https://vnexpress.net/cach-han-che-rui-ro-cua-mot-nha-dau-tu-chung-khoan-20-nam-kinh-nghiem-4351905.html" target='_blank'>Cách hạn chế rủi ro của một nhà đầu tư chứng khoán 20 năm kinh nghiệm</a></td>
+<td>25/9/2021</td>
 </tr>
 <tr>
-<td><a href="https://web.archive.org/web/20130806204630/https://sgtt.vn/Loi-song/90353/Kinh-nghiem-tieu-dung-Chong-nong-tiet-kiem-dien.html" target='_blank'>Kinh nghiệm tiêu dùng: Chống nóng… tiết kiệm điện</a></td>
-<td>3/8/2007</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806202910/https://sgtt.vn/Kinh-te/86506/Khi-doanh-nghiep-duoc-khieu-nai.html" target='_blank'>Khi doanh nghiệp được khiếu nại</a></td>
-<td>23/11/2007</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806202717/https://sgtt.vn/Ban-doc/85691/Ban-doc-viet.html" target='_blank'>Quyền của người tiêu dùng: đổi hoặc trả hàng đã mua</a></td>
-<td>25/12/2007</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203318/https://sgtt.vn/Ban-doc/84516/Thieu-tien-le-co-nguyen-nhan-tu-nguoi-dan.html" target='_blank'>Thiếu tiền lẻ: có nguyên nhân từ người dân</a></td>
-<td>23/1/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203853/https://sgtt.vn/Ban-doc/77934/San-chung-cu-chua-thuc-su-la-“san-dinh-lang”.html" target='_blank'>Sân chung cư chưa thực sự là “sân đình làng”</a></td>
-<td>6/5/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806202712/https://sgtt.vn/Ban-doc/76448/Nen-linh-hoat-hon-trong-viec-danh-so-nha.html" target='_blank'>Nên linh hoạt hơn trong việc đánh số nhà</a></td>
-<td>6/6/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203551/https://sgtt.vn/Ban-doc/74335/De-tranh-bi-loai-vi-ghi-nguyen-vong-vao-truong-co-diem-qua-cao.html" target='_blank'>Để tránh bị loại vì ghi nguyện vọng vào trường có điểm quá cao</a></td>
-<td>16/7/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203313/https://sgtt.vn/Ban-doc/73071/Ban-doc-viet-Cai-tien-hoat-dong-xe-buyt-de-hut-khach.html" target='_blank'>Cải tiến hoạt động của xe buýt để hút khách</a></td>
-<td>11/8/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203546/https://sgtt.vn/Ban-doc/71988/Ban-doc-viet-Doc-ky-huong-dan-truoc-khi-dung.html" target='_blank'>Đọc kỹ hướng dẫn trước khi dùng!</a></td>
-<td>6/9/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806204705/https://sgtt.vn/Thoi-su/70375/Tiet-kiem-dien-cho-may-lanh.html" target='_blank'>Tiết kiệm điện cho máy lạnh</a></td>
-<td>9/10/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203526/https://sgtt.vn/Tieu-dung/70074/Ve-sinh-may-lanh.html" target='_blank'>Vệ sinh máy lạnh</a></td>
-<td>18/10/2008</td>
+<td><a href="https://web.archive.org/web/20140220103119/https://sgtt.vn/Ban-doc/177400/Chi-nen-lam-man-hinh-giai-tri.html" target='_blank'>TV không có tuner</a></td>
+<td>8/5/2013</td>
 </tr>
 <tr>
 <td><a href="https://web.archive.org/web/20140122132406/https://sgtt.vn/Tieu-dung/68921/Bat-benh-den-huynh-quang.html" target='_blank'>Bắt bệnh đèn huỳnh quang</a></td>
 <td>11/11/2008</td>
 </tr>
 <tr>
-<td><a href="https://web.archive.org/web/20140220103119/https://sgtt.vn/Ban-doc/177400/Chi-nen-lam-man-hinh-giai-tri.html" target='_blank'>TV không có tuner</a></td>
-<td>8/5/2013</td>
+<td><a href="https://web.archive.org/web/20130806203526/https://sgtt.vn/Tieu-dung/70074/Ve-sinh-may-lanh.html" target='_blank'>Vệ sinh máy lạnh</a></td>
+<td>18/10/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806204705/https://sgtt.vn/Thoi-su/70375/Tiet-kiem-dien-cho-may-lanh.html" target='_blank'>Tiết kiệm điện cho máy lạnh</a></td>
+<td>9/10/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806203546/https://sgtt.vn/Ban-doc/71988/Ban-doc-viet-Doc-ky-huong-dan-truoc-khi-dung.html" target='_blank'>Đọc kỹ hướng dẫn trước khi dùng!</a></td>
+<td>6/9/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806203313/https://sgtt.vn/Ban-doc/73071/Ban-doc-viet-Cai-tien-hoat-dong-xe-buyt-de-hut-khach.html" target='_blank'>Cải tiến hoạt động của xe buýt để hút khách</a></td>
+<td>11/8/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806203551/https://sgtt.vn/Ban-doc/74335/De-tranh-bi-loai-vi-ghi-nguyen-vong-vao-truong-co-diem-qua-cao.html" target='_blank'>Để tránh bị loại vì ghi nguyện vọng vào trường có điểm quá cao</a></td>
+<td>16/7/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806202712/https://sgtt.vn/Ban-doc/76448/Nen-linh-hoat-hon-trong-viec-danh-so-nha.html" target='_blank'>Nên linh hoạt hơn trong việc đánh số nhà</a></td>
+<td>6/6/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806203853/https://sgtt.vn/Ban-doc/77934/San-chung-cu-chua-thuc-su-la-“san-dinh-lang”.html" target='_blank'>Sân chung cư chưa thực sự là “sân đình làng”</a></td>
+<td>6/5/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806203318/https://sgtt.vn/Ban-doc/84516/Thieu-tien-le-co-nguyen-nhan-tu-nguoi-dan.html" target='_blank'>Thiếu tiền lẻ: có nguyên nhân từ người dân</a></td>
+<td>23/1/2008</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806202717/https://sgtt.vn/Ban-doc/85691/Ban-doc-viet.html" target='_blank'>Quyền của người tiêu dùng: đổi hoặc trả hàng đã mua</a></td>
+<td>25/12/2007</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806202910/https://sgtt.vn/Kinh-te/86506/Khi-doanh-nghiep-duoc-khieu-nai.html" target='_blank'>Khi doanh nghiệp được khiếu nại</a></td>
+<td>23/11/2007</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20130806204630/https://sgtt.vn/Loi-song/90353/Kinh-nghiem-tieu-dung-Chong-nong-tiet-kiem-dien.html" target='_blank'>Kinh nghiệm tiêu dùng: Chống nóng… tiết kiệm điện</a></td>
+<td>3/8/2007</td>
+</tr>
+<tr>
+<td><a href="https://web.archive.org/web/20140208003515/https://sgtt.vn/Ban-doc/93807/Cau-chuyen-tieu-dung-Sua-xe-may-coi-chung-dinh-chau.html" target='_blank'>Sửa xe máy, coi chừng dính… chấu</a></td>
+<td>18/4/2007</td>
 </tr>
 </tbody>
 </table>
