--- a/y-kien/su-giau-co.html
+++ b/y-kien/su-giau-co.html
@@ -233,7 +233,7 @@ data-ad-slot="5275186684">
 <br>Nếu không được đến mức "có của ăn mấy đời không hết" mà chỉ đến mức "có của ăn suốt đời không hết" thì cũng gọi là giàu. Sự giàu có có tính tương đối, tùy theo mức độ chi tiêu cá nhân mà khối tài sản cần có để "ăn suốt đời không hết" sẽ khác nhau. Mọi người đều có thể giàu ở mức độ này nếu làm theo phương pháp <a href="/huu-ich/chi-tieu">6 cái hũ</a>, bắt đầu càng sớm thì càng <a href="/huu-ich/tich-luy">dễ giàu</a>.
 <br>Phương pháp 6 cái hũ chỉ cho người ta kiểm soát chi tiêu để tích luỹ làm giàu. Từ xưa, ông bà ta đã dạy "<a href="thanh-ngu-ve-tien">Buôn tàu bán bè không bằng ăn dè hà tiện</a>". Trong thời buổi kinh tế thị trường như bây giờ thì rất khó ăn dè hà tiện vì có quá nhiều thứ mời gọi mình mua. Thứ nào trông cũng hay hết, mua về dùng sẽ được bao nhiêu điều tiện lợi, chỉ có một điều hại là không kịp <a href="/huu-ich/tich-luy">giàu trước khi già</a> &#x1f609;.</p>
 <p>Theo chương trình TV <i>Brain Games: Will You Make a Million</i> trong National Geographic Channel, công thức của sự giàu có là</p>
-<div class="title">Giàu có = Thu nhập - Chi tiêu + Đầu tư</div>
+<div class="title">Giàu&nbsp;có = Thu&nbsp;nhập - Chi&nbsp;tiêu + Đầu&nbsp;tư</div>
 <div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</div><amp-img alt="Sự giàu có" src="/images/CaseofMoney.jpg" width="324" height="243" layout="responsive"></amp-img></a>
 </div>
 <p>Hai điểm mấu chốt của công thức trên là:</p>
