--- a/kinh-nghiem/may-tinh/in-sach-nho.html
+++ b/kinh-nghiem/may-tinh/in-sach-nho.html
@@ -120,9 +120,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 }
 
 </style>
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 </head>
 
 <body>
+<amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
   <!-- top of body -->
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
